--- a/src/app/components/home/home.view.pug
+++ b/src/app/components/home/home.view.pug
@@ -1,3 +1,8 @@
+//- Loading
+.preloader-main(data-ng-show="loading")
+    .preloader-main__loading
+        .preloader-main__loading__circle
+
 //- Header
 page-header
 
