--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'modules/buttons';
 @import 'modules/forms';
 @import 'modules/images';
+@import 'modules/preloaders';
 @import 'modules/typography';
 
 @import 'layout/home';
