--- a/src/app/components/all-questions/all-questions.view.pug
+++ b/src/app/components/all-questions/all-questions.view.pug
@@ -1,7 +1,7 @@
 .all-questions
 
     //- Questions
-    .all-questions__question(ng-repeat="question in allQuestions | filter: filterBy | limitTo: questionsLimit | orderBy: sortBy : true")
+    .all-questions__question(data-ng-repeat="question in allQuestions | filter: filterBy | limitTo: questionsLimit | orderBy: sortBy : true")
         .row.no-margin--sm
             .col-xs-12
 
@@ -17,14 +17,14 @@
                                         .col-xs-3.col-sm-2.no-padding-left.no-padding-right
 
                                             .box-question__heading--avatar
-                                                .avatar.avatar--small(ng-click="showUserProfile(users[question.author]['id'])")
-                                                    img.avatar__img(ng-src="img/avatars/{{ question.author }}.jpg" alt="{{ users[question.author]['name'] }}")   
+                                                .avatar.avatar--small(data-ng-click="showUserProfile(users[question.author]['id'])")
+                                                    img.avatar__img(data-ng-src="img/avatars/{{ question.author }}.jpg" alt="{{ users[question.author]['name'] }}")   
                                         
                                         .col-xs-9.col-sm-10.no-padding-left
 
                                             .box-question__heading--question
                                                 .author
-                                                    a(href="" ng-click="showUserProfile(users[question.author]['id'])") {{ users[question.author]['name'] }}
+                                                    a(href="" data-ng-click="showUserProfile(users[question.author]['id'])") {{ users[question.author]['name'] }}
                                                     span.text--light.separator--left is asking:        
                                                 .title
                                                     a(ui-sref="home.singlequestion({ url: toUrl(question.question) })") 
@@ -43,46 +43,46 @@
                                                     .action.action--asked
                                                         span.text--light asked
 
-                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.box-question__content--col(ng-if="question.moreActivitiesLength")
+                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.box-question__content--col(data-ng-if="question.moreActivitiesLength")
 
                                                 .box-question__content--more-activites
                                                     .count.text--basic {{ question.moreActivitiesLength }}
                                                     .action.action--more-activites
                                                         span.text--italic more activites
 
-                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-md-down.box-question__content--col(ng-repeat="activity in question.activities")
+                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-md-down.box-question__content--col(data-ng-repeat="activity in question.activities")
                                                 
                                                 .box-question__content--activity
-                                                    .avatar.avatar--small(ng-click="showUserProfile(users[activity.author]['id'])")
-                                                        img.avatar__img(ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
-                                                    .action(ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
+                                                    .avatar.avatar--small(data-ng-click="showUserProfile(users[activity.author]['id'])")
+                                                        img.avatar__img(data-ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
+                                                    .action(data-ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
                                                         span.text--light {{ activitiesTypes[activity.type] }}     
 
-                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-sm-down.hidden-lg-up.box-question__content--col(ng-repeat="activity in question.activities | limitTo: 2")
+                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-sm-down.hidden-lg-up.box-question__content--col(data-ng-repeat="activity in question.activities | limitTo: 2")
                                                 
                                                 .box-question__content--activity
-                                                    .avatar.avatar--small(ng-click="showUserProfile(users[activity.author]['id'])")
-                                                        img.avatar__img(ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
-                                                    .action(ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
+                                                    .avatar.avatar--small(data-ng-click="showUserProfile(users[activity.author]['id'])")
+                                                        img.avatar__img(data-ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
+                                                    .action(data-ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
                                                         span.text--light {{ activitiesTypes[activity.type] }}
 
-                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-md-up.box-question__content--col(ng-repeat="activity in question.activities | limitTo: 1")
+                                            .col-xs-6.col-sm-4.col-md-3.col-lg-2.hidden-md-up.box-question__content--col(data-ng-repeat="activity in question.activities | limitTo: 1")
                                                 
                                                 .box-question__content--activity
-                                                    .avatar.avatar--small(ng-click="showUserProfile(users[activity.author]['id'])")
-                                                        img.avatar__img(ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
-                                                    .action(ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
+                                                    .avatar.avatar--small(data-ng-click="showUserProfile(users[activity.author]['id'])")
+                                                        img.avatar__img(data-ng-src="img/avatars/{{ activity.author }}.jpg" alt="{{ users[activity.author]['name'] }}")                                            
+                                                    .action(data-ng-class="{'action--commented': activitiesTypes[activity.type] == 'commented', 'action--answered': activitiesTypes[activity.type] == 'answered'}")
                                                         span.text--light {{ activitiesTypes[activity.type] }}                                                                                                                                                                                                                                                                                           
                                                 
                                 .col-xs-5.col-md-4.col-lg-3.no-padding-right
                                     
                                     .box-question__aside
                                         .all-questions__question--stats
-                                            .stat(ng-repeat="stat in question.stats.discussion")
+                                            .stat(data-ng-repeat="stat in question.stats.discussion")
                                                 span.text--basic {{ stat.value }}
                                                 span.text--italic.separator--left {{ stat.name }}                                                                               
 
     //- Load more
-    .all-questions__load-more(ng-if="allQuestions.length >= questionsLimit && !filterBy.question.length && questionsLimit")
-        button.btn-link(ng-click="loadMoreQuestions()")
+    .all-questions__load-more(data-ng-if="allQuestions.length >= questionsLimit && !filterBy.question.length && questionsLimit")
+        button.btn-link(data-ng-click="loadMoreQuestions()")
             | load more questions ({{ allQuestions.length - questionsLimit }})
