--- a/src/scss/modules/_forms.scss
+++ b/src/scss/modules/_forms.scss
@@ -1,5 +1,5 @@
 .radio {
-    margin-right: 45px;
+    margin-right: 50px;
 
     input[type="radio"]:empty {
         display: none;
@@ -37,6 +37,7 @@
 
     input[type="radio"]:checked ~ label:before {
         content: "";
+        position: absolute;
         top: 9px;
         left: -15.5px;
         z-index: 2;        
